--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.6",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "graphql": "^16.11.0",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
